arrumando os links dos buttons

--- a/untitled/imagens.qrc
+++ b/untitled/imagens.qrc
@@ -3,5 +3,10 @@
         <file>imagens/fundo.jpg</file>
         <file>imagens/fundo-vermelho.jpg</file>
         <file>imagens/woman.png</file>
+        <file>imagens/hotel.png</file>
+        <file>imagens/notes.png</file>
+        <file>imagens/room-key 2.png</file>
+        <file>imagens/room-key.png</file>
+        <file>imagens/reception.png</file>
     </qresource>
 </RCC>
