--- a/untitled/hospedes.ui
+++ b/untitled/hospedes.ui
@@ -6,34 +6,18 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>792</width>
-    <height>545</height>
+    <width>465</width>
+    <height>458</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>791</width>
-     <height>551</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="pixmap">
-    <pixmap resource="imagens.qrc">:/imagens/fundo-vermelho.jpg</pixmap>
-   </property>
-  </widget>
   <widget class="QPushButton" name="btNovoHospede">
    <property name="geometry">
     <rect>
-     <x>330</x>
-     <y>500</y>
+     <x>140</x>
+     <y>390</y>
      <width>161</width>
      <height>25</height>
     </rect>
@@ -42,22 +26,46 @@
     <string>Cadastrar Novo Hospede</string>
    </property>
   </widget>
-  <widget class="QLabel" name="lbPessoa0">
+  <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>30</y>
-     <width>111</width>
-     <height>41</height>
+     <x>30</x>
+     <y>50</y>
+     <width>54</width>
+     <height>17</height>
     </rect>
    </property>
    <property name="text">
-    <string>TextLabel</string>
+    <string>Nome:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>80</y>
+     <width>54</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Idade:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>110</y>
+     <width>54</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>RPG:</string>
    </property>
   </widget>
  </widget>
- <resources>
-  <include location="imagens.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
