--- a/untitled/imagens.qrc
+++ b/untitled/imagens.qrc
@@ -8,5 +8,6 @@
         <file>imagens/room-key 2.png</file>
         <file>imagens/room-key.png</file>
         <file>imagens/reception.png</file>
+        <file>imagens/passport.png</file>
     </qresource>
 </RCC>
