--- a/untitled/mainwindow.ui
+++ b/untitled/mainwindow.ui
@@ -27,28 +27,6 @@
      <number>0</number>
     </property>
     <widget class="QWidget" name="page">
-     <widget class="QPushButton" name="pushButton">
-      <property name="geometry">
-       <rect>
-        <x>330</x>
-        <y>410</y>
-        <width>131</width>
-        <height>51</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">
-background-color: transparent;
-border-image: url(:off.png);
-background: none;
-border: none;
-background-repeat: none;
-</string>
-      </property>
-      <property name="text">
-       <string>l</string>
-      </property>
-     </widget>
      <widget class="QPushButton" name="CadastroButton">
       <property name="geometry">
        <rect>
@@ -242,23 +220,47 @@ background-repeat: none;
      </widget>
     </widget>
     <widget class="QWidget" name="page_2">
-     <widget class="QPushButton" name="userButton">
+     <widget class="QPushButton" name="BuscaButton">
       <property name="geometry">
        <rect>
-        <x>50</x>
-        <y>50</y>
+        <x>480</x>
+        <y>80</y>
         <width>121</width>
-        <height>131</height>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Realizar uma busca</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="AttButton">
+      <property name="geometry">
+       <rect>
+        <x>280</x>
+        <y>80</y>
+        <width>80</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Atualizar</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="icon">
+      <property name="geometry">
+       <rect>
+        <x>370</x>
+        <y>20</y>
+        <width>101</width>
+        <height>101</height>
        </rect>
       </property>
       <property name="styleSheet">
-       <string notr="true">
-background-color: transparent;
+       <string notr="true">background-color: transparent;
 border-image: url(:off.png);
 background: none;
 border: none;
 background-repeat: none;
-
 </string>
       </property>
       <property name="text">
@@ -266,13 +268,36 @@ background-repeat: none;
       </property>
       <property name="icon">
        <iconset resource="imagens.qrc">
-        <normaloff>:/imagens/woman.png</normaloff>:/imagens/woman.png</iconset>
+        <normaloff>:/imagens/passport.png</normaloff>:/imagens/passport.png</iconset>
       </property>
       <property name="iconSize">
        <size>
-        <width>120</width>
-        <height>120</height>
+        <width>100</width>
+        <height>100</height>
        </size>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="VoltarButton">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>10</y>
+        <width>80</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Voltar</string>
+      </property>
+     </widget>
+     <widget class="QTextBrowser" name="textBrowser">
+      <property name="geometry">
+       <rect>
+        <x>25</x>
+        <y>131</y>
+        <width>761</width>
+        <height>341</height>
+       </rect>
       </property>
      </widget>
     </widget>
