--- a/untitled/hospedes.ui
+++ b/untitled/hospedes.ui
@@ -42,7 +42,7 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>50</x>
+     <x>60</x>
      <y>100</y>
      <width>41</width>
      <height>17</height>
@@ -55,14 +55,14 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>60</x>
+     <x>70</x>
      <y>140</y>
      <width>31</width>
      <height>17</height>
     </rect>
    </property>
    <property name="text">
-    <string>RPG:</string>
+    <string>RG:</string>
    </property>
   </widget>
   <widget class="QTextEdit" name="textNome">
